--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Raiyan
 logo: /assets/img/headshot_circle.png
-decription: "I am a dedicated GIS specialist with expertise in planning, spatial analysis, remote sensing, and AI-integrated geospatial modeling, proficient in GIS tools."
+desription: "I am a dedicated GIS specialist with expertise in planning, spatial analysis, remote sensing, and AI-integrated geospatial modeling, proficient in GIS tools."
 location: "Dhaka, Bangladesh"
 #site profiles
 show_downloads: true
